boom/measurements/verilator-mega-O3/compile-time-run-6.txt
START: Current timestamp in milliseconds: 1731323133875
GROUP: verilator SUBGROUP: firtool COMMAND: firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-6//boom.fir -o /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-6//boom.sv
/home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-6//boom.fir:1:16: error: FIRRTL version must be >=2.0.0
FIRRTL version 1.1.0
               ^

 Performance counter stats for '/usr/local/bin/firtool --lowering-options=disallowLocalVariables,mitigateVivadoArrayIndexConstPropBug /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-6//boom.fir -o /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-6//boom.sv':

             30.21 msec task-clock:u                     #    0.988 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             2,884      page-faults:u                    #   95.468 K/sec                     
        10,145,660      cycles:u                         #    0.336 GHz                         (10.69%)
        10,479,581      stalled-cycles-frontend:u        #  103.29% frontend cycles idle        (15.20%)
       213,348,403      instructions:u                   #   21.03  insn per cycle            
                                                  #    0.05  stalled cycles per insn     (25.10%)
        44,247,567      branches:u                       #    1.465 G/sec                       (35.03%)
           676,434      branch-misses:u                  #    1.53% of all branches             (44.96%)
        90,041,240      L1-dcache-loads:u                #    2.981 G/sec                       (49.59%)
         7,688,769      L1-dcache-load-misses:u          #    8.54% of all L1-dcache accesses   (49.59%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
         1,181,823      L1-icache-loads:u                #   39.121 M/sec                       (49.62%)
             9,228      L1-icache-load-misses:u          #    0.78% of all L1-icache accesses   (49.62%)
            54,328      dTLB-loads:u                     #    1.798 M/sec                       (49.62%)
            30,091      dTLB-load-misses:u               #   55.39% of all dTLB cache accesses  (45.14%)
               428      iTLB-loads:u                     #   14.168 K/sec                       (35.21%)
             1,554      iTLB-load-misses:u               #  363.08% of all iTLB cache accesses  (25.28%)
           835,894      L1-dcache-prefetches:u           #   27.670 M/sec                       (15.35%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.030586143 seconds time elapsed

       0.023715000 seconds user
       0.006776000 seconds sys


GROUP: verilator SUBGROUP: verilator
%Error: Cannot find file containing module: '/home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-6/boom.sv'
%Error: This may be because there's no search path specified with -I<dir>.
        ... Looked in:
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-6/boom.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-6/boom.sv.v
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-6/boom.sv.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-6/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-6/boom.sv
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-6/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-6/boom.sv.v
             /home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-6/boom-vtor//home/bea/Research/paper-evals/arc-tests/boom/./build/verilator-mega-O3-compile-time-run-6/boom.sv.sv
%Error: Exiting due to 2 error(s)

 Performance counter stats for '/usr/bin/verilator -O3 --noassert --x-assign fast --x-initial fast --threads 1 -sv -cc -Mdir /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-6//boom-vtor /home/bea/Research/paper-evals/arc-tests/boom//./build/verilator-mega-O3-compile-time-run-6//boom.sv /home/bea/Research/paper-evals/arc-tests/boom/../verilator-stubs.sv -j 0 -DPRINTF_COND=0 -DASSERT_VERBOSE_COND=0 -DSTOP_COND=0 -Wno-WIDTH':

             67.41 msec task-clock:u                     #    1.713 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             4,235      page-faults:u                    #   62.824 K/sec                     
       137,529,641      cycles:u                         #    2.040 GHz                         (59.98%)
        19,216,077      stalled-cycles-frontend:u        #   13.97% frontend cycles idle        (55.81%)
       432,873,435      instructions:u                   #    3.15  insn per cycle            
                                                  #    0.04  stalled cycles per insn     (12.97%)
        47,409,191      branches:u                       #  703.288 M/sec                       (35.46%)
         1,817,035      branch-misses:u                  #    3.83% of all branches             (44.73%)
       102,568,936      L1-dcache-loads:u                #    1.522 G/sec                       (46.52%)
         2,151,181      L1-dcache-load-misses:u          #    2.10% of all L1-dcache accesses   (46.48%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
        27,817,455      L1-icache-loads:u                #  412.656 M/sec                       (46.48%)
           434,670      L1-icache-load-misses:u          #    1.56% of all L1-icache accesses   (46.48%)
           537,022      dTLB-loads:u                     #    7.966 M/sec                       (46.52%)
            24,025      dTLB-load-misses:u               #    4.47% of all dTLB cache accesses  (49.55%)
           440,783      iTLB-loads:u                     #    6.539 M/sec                       (69.74%)
            12,143      iTLB-load-misses:u               #    2.75% of all iTLB cache accesses  (65.29%)
           685,376      L1-dcache-prefetches:u           #   10.167 M/sec                       (60.84%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.039359583 seconds time elapsed

       0.053704000 seconds user
       0.012244000 seconds sys


GROUP: verilator SUBGROUP: clang
